style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 17px;
    font-family: "Nunito", sans-serif;
    background-color: #415a77;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #f8f9fa;

    padding: 2rem 3rem;
    border-radius: 2rem;
    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
}

h1 {
    color: #23314b;
    font-size: 30px; 
    font-weight: 800;
    padding-bottom: 2rem;
}

form {
    display: flex;
    justify-content: center;
    gap: 32px 64px;
    
    flex-wrap: wrap;
    max-width: 600px;
}

p,
label {
    letter-spacing: 0.3px;
    font-weight: 600;
    color: #0c2c52;
}

.group {
    display: flex;
    flex-direction: column;
    justify-content: start;
    width: 220px;
}

.field {
    background: #e3ebf3;
    border-radius: 1rem;
    height: 35px;
    width: 100%;
    padding: 0 10px;
    font-size: 16px;
    outline: none;
    border: 1px solid #cbd5e1;

    font-family: "Nunito", sans-serif;
}

.field:focus {
    outline: 2px solid rgb(57, 54, 94);
    box-shadow: 0 10px 30px rgba(57, 54, 94, 0.15);
}

.error {
    height: 30px;
    color: red;
    font-size: 15px;
}

.agree {
    display:  flex;
    flex-direction: row;
    align-items: center;
    width: 220px;
}

#submit {
    background-color: #334458;
    color: white;
    border-radius: 16px;
    border: none;
    padding: 12px 48px;
    max-width: fit-content;
    transition: all 0.2s ease;
    font-size: 20px;

    cursor: pointer;
}

#submit:hover {
    background-color: #405770;
}

#pw {
    gap: 24px;
}

#show-pw {
    background-color: #415a77;
    color: white;
    max-width: 60px;
    border: none;
    border-radius: 15px;
    padding: 8px 12px;
    cursor: pointer;
    margin: 12px;
}


.error-state {
    border: 1px solid red;
}
.error-state:focus {
    outline: 1px solid rgb(192, 17, 17);
    box-shadow: 0 10px 30px rgba(192, 17, 17, 0.15);
}

.success-state {
    border: 1px solid #cbd5e1;
}
.success-state:focus {
    outline: 1px solid rgb(55, 167, 51);
    box-shadow: 0 10px 30px rgba(29, 122, 26, 0.15);
}

